--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -963,21 +963,20 @@
                         <option value="TH">Terraced House</option>
                         <option value="MFH">Multi Family Home</option>
                         <option value="AB">Apparment Block</option>
-                        <option value="IWU Hotels Boarding Restaurants or Catering">IWU Hotels, Boarding, Restaurants or Catering</option>
-                        <option value="IWU Office Administrative or Government Buildings">IWU Office, Administrative or Government Buildings</option>
+                        <option value="IWU Hotels, Boarding, Restaurants or Catering">IWU Hotels, Boarding, Restaurants or Catering</option>
+                        <option value="IWU Office, Administrative or Government Buildings">IWU Office, Administrative or Government Buildings</option>
                         <option value="IWU Technical and Utility">IWU Technical and Utility</option>
                         <option value="IWU Trade Buildings">IWU Trade Buildings</option>
-                        <option value="IWU Technical and Utility supply and disposal">IWU Technical and Utility (supply and disposal)</option>
-                        <option value="IWU School Day Nursery and other Care">IWU School, Day Nursery and other Care</option>
+                        <option value="IWU Technical and Utility (supply and disposal)">IWU Technical and Utility (supply and disposal)</option>
+                        <option value="IWU School, Day Nursery and other Care">IWU School, Day Nursery and other Care</option>
                         <option value="IWU Transport">IWU Transport</option>
                         <option value="IWU Health and Care">IWU Health and Care</option>
                         <option value="IWU Sports Facilities">IWU Sports Facilities</option>
                         <option value="IWU Culture and Leisure">IWU Culture and Leisure</option>
                         <option value="IWU Research and University Teaching">IWU Research and University Teaching</option>
-                        <option value="IWU Technical and Utility supply and disposal">IWU Technical and Utility (supply and disposal)</option>
-                        <option value="IWU Generalized 1 Services building">IWU Generalized (1) Services building</option>
-                        <option value="IWU Generalized 2 Production buildings">IWU Generalized (2) Production buildings</option>
-                        <option value="IWU Production Workshop Warehouse or Operations">IWU Production, Workshop, Warehouse or Operations</option>
+                        <option value="IWU Generalized (1) Services building">IWU Generalized (1) Services building</option>
+                        <option value="IWU Generalized (2) Production buildings">IWU Generalized (2) Production buildings</option>
+                        <option value="IWU Production, Workshop, Warehouse or Operations">IWU Production, Workshop, Warehouse or Operations</option>
                     </select>
                 </div>
 
