--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -956,16 +956,15 @@
             <span class="row__title">Parameters</span>
             <div class="row__filters">
                 <div class="row__filters-item">
-                    <label for="filterBuildingResidential">Residential buildings</label>
+                    <label for="filterBuildingResidential">Building Type</label>
                     <select id="filterBuildingResidential" onchange="onBuildingResidentialChange(event)">
                         <option value="">Select an option</option>
                         <option value="SFH">Single Family Home</option>
                         <option value="TH">Terraced House</option>
                         <option value="MFH">Multi Family Home</option>
-                        <option value="AB">Apparment Block</option>
+                        <option value="AB">Appartment Block</option>
                         <option value="IWU Hotels, Boarding, Restaurants or Catering">IWU Hotels, Boarding, Restaurants or Catering</option>
                         <option value="IWU Office, Administrative or Government Buildings">IWU Office, Administrative or Government Buildings</option>
-                        <option value="IWU Technical and Utility">IWU Technical and Utility</option>
                         <option value="IWU Trade Buildings">IWU Trade Buildings</option>
                         <option value="IWU Technical and Utility (supply and disposal)">IWU Technical and Utility (supply and disposal)</option>
                         <option value="IWU School, Day Nursery and other Care">IWU School, Day Nursery and other Care</option>
