updated workflow to save simulation results to the right GML-object

--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -973,7 +973,7 @@
                         <option value="IWU Sports Facilities">IWU Sports Facilities</option>
                         <option value="IWU Culture and Leisure">IWU Culture and Leisure</option>
                         <option value="IWU Research and University Teaching">IWU Research and University Teaching</option>
-                        <option value="IWU Generalized (1) Services building">IWU Generalized (1) Services building</option>
+                        <!--<option value="IWU Generalized (1) Services building">IWU Generalized (1) Services building</option>-->
                         <option value="IWU Generalized (2) Production buildings">IWU Generalized (2) Production buildings</option>
                         <option value="IWU Production, Workshop, Warehouse or Operations">IWU Production, Workshop, Warehouse or Operations</option>
                     </select>
